--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <ul>
     <li><a href="#">Home</a></li>
     <li><a href="#portfolio">Portfolio</a></li>
+    <li><a href="#testimonials">Testimonials</a></li>
     <li><a href="#contact">Contact</a></li>
 </ul>
 </nav>
@@ -74,9 +75,20 @@
 </div>
 </section>
 
-<section id="contact">
+<div>
+    <section id="testimonials">
+        <h3>Testimonials</h3>
+        <div class="intro clearfix">
+            <img class="image-head" src="images/responsive-layout-profile.png" alt="Testimonial Image">
+             <p class="text-intro">"Student Name really did a great job on my project. I would definitely recommend them for future projects"</p>
+             <p class="text-intro">- Student Name Client</p>
+        </div>
+    </section>
+</div>
+
 
 <footer class="main-footer clearfix">
+    <section id="contact">
     <h3>CONTACT</h3>
     <p class="text-outro">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
     <p class="text-contact">Phone <b>+1 (111) 555 - 1234</b></p>
@@ -92,13 +104,15 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-</section>
+
 
 </div>
 
+</section>
 </footer>
 
 </body>
